# RasterToolbox

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pixi.toml  vcpkg.json
.github/workflows/: ci.yml  release-windows.yml
cmake/: CompilerWarnings.cmake  Dependencies.cmake  QtHelpers.cmake
cmake/toolchains/: mingw-w64.cmake
docs/adr/: ADR-0001-init-skeleton-and-layering.md
docs/architecture/: rastertoolbox-architecture.md
include/rastertoolbox/app/: Application.hpp
include/rastertoolbox/common/: ErrorClass.hpp  Timestamp.hpp  WindowsErrorDialogs.hpp
include/rastertoolbox/config/: AppSettings.hpp  JsonSchemas.hpp  Preset.hpp  PresetRepository.hpp
include/rastertoolbox/dispatcher/: ProgressEvent.hpp  Task.hpp  TaskDispatcherService.hpp  TaskQueueManager.hpp  TaskReportSerializer.hpp  WorkerContext.hpp
include/rastertoolbox/engine/: DatasetInfo.hpp  DatasetReader.hpp  GdalRuntime.hpp  OverviewBuilder.hpp  ProgressSignalBridge.hpp  RasterConverter.hpp  RasterExecutionService.hpp  RasterJobRequest.hpp  RasterJobResult.hpp
include/rastertoolbox/ui/: MainWindow.hpp  NavigationPillBar.hpp
include/rastertoolbox/ui/panels/: LogPanel.hpp  OverviewDetailPanel.hpp  PresetPanel.hpp  QueuePanel.hpp  SourcePanel.hpp
resources/presets/: default-presets.json
resources/qrc/: app.qrc
resources/qss/: light.qss  modern.qss
scripts/: build.sh  configure.sh  package-windows-release.ps1  package-windows-release.sh  phase6_acceptance.sh  run-local-windows.ps1
src/app/: Application.cpp  main.cpp
src/config/: AppSettings.cpp  JsonSchemas.cpp  PresetRepository.cpp
src/dispatcher/: TaskDispatcherService.cpp  TaskQueueManager.cpp  TaskReportSerializer.cpp  WorkerContext.cpp
src/engine/: DatasetReader.cpp  GdalCallbackAdapters.cpp  GdalRuntime.cpp  OverviewBuilder.cpp  ProgressSignalBridge.cpp  RasterConverter.cpp  RasterExecutionService.cpp
src/ui/: MainWindow.cpp  NavigationPillBar.cpp
src/ui/panels/: LogPanel.cpp  OverviewDetailPanel.cpp  PresetPanel.cpp  QueuePanel.cpp  SourcePanel.cpp
tests/: CMakeLists.txt
tests/integration/: test_dispatcher_integration.cpp  test_gebco_workflow.cpp  test_mainwindow_preset_and_log.cpp  test_real_data_phase6.cpp  test_task_report_and_log_export.cpp
tests/unit/: test_unit_model.cpp
tests/unit/config/: test_config_defaults.cpp  test_preset_repository.cpp  test_preset_schema.cpp
tests/unit/dispatcher/: test_progress_event_contract.cpp  test_task_queue_manager.cpp
tests/unit/engine/: test_engine_contract.cpp  test_execution_service.cpp  test_metadata_reader.cpp
